Fix Font Awesome Error And Overflow Error On Mobile

--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
+html,body
+{
+    overflow-x: hidden;
+}
+
 .equal-height .card-content {
     flex: auto;
 }
